--- a/src/index.html
+++ b/src/index.html
@@ -69,6 +69,7 @@
                           </form>
                     </div>
               </div>
+
               <div class="col-6">
                   <div class="card mb-4">
                       <img src="./assets/img/photo-1.jpg" class="card-img-top" alt="photo-1">
@@ -107,6 +108,7 @@
                             </ul>
                           </nav>
               </div>
+
               <div class="col-3">
                   <div class="list-group mb-4">
                       <a href="#" class="list-group-item list-group-item-action active">Sectione 1</a>
@@ -161,7 +163,8 @@
             <h3>Traveler Blog</h3>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nihil harum provident magni consequuntur molestiae iusto labore cum veritatis quia dolorum vitae quo ipsum ducimus, autem quos soluta dolorem? Iure, dolor!</p>
           </div>
-          <div class="col-3">
+
+          <div class="col-3 ctnter">
             <h3>Contacts</h3>
             <address>
               <b>Twitter, Inc.</b><br>
@@ -170,13 +173,14 @@
               P: (123) 4567890
             </address>
           </div>
+
           <div class="col-3">
             <h3>Navigation</h3>
             <nav class="nav flex-column">
                 <a class="nav-link active" href="#">Active</a>
                 <a class="nav-link" href="#">Link</a>
                 <a class="nav-link" href="#">Link</a>
-                <a class="nav-link disabled" href="#">Disabled</a>
+                <a class="nav-link disabledgit commit -m "first commit"" href="#">Disabled</a>
               </nav>
           </div>
         </div>
