--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
       <div class="container">
           <a class="navbar-brand" href="#">
             <img src="./assets/img/logo.png" alt="logo">
@@ -49,7 +49,7 @@
     <main class="main">
         <div class="container">
             <div class="row">
-              <div class="col-3">
+              <div class="col-lg-3 order-3 order-lg-1">
                   <div class="card mb-4">
                       <img src="./assets/img/author.jpg" class="card-img-top" alt="author">
                       <div class="card-body">
@@ -70,7 +70,7 @@
                     </div>
               </div>
 
-              <div class="col-6">
+              <div class="col-lg-6 col-md-8 order-1 order-lg-2">
                   <div class="card mb-4">
                       <img src="./assets/img/photo-1.jpg" class="card-img-top" alt="photo-1">
                       <div class="card-body">
@@ -109,7 +109,7 @@
                           </nav>
               </div>
 
-              <div class="col-3">
+              <div class="col-lg-3 col-md-4 order-2 order-lg-3 ">
                   <div class="list-group mb-4">
                       <a href="#" class="list-group-item list-group-item-action active">Sectione 1</a>
                       <a href="#" class="list-group-item list-group-item-action">Sectione 2</a>
@@ -159,12 +159,12 @@
     <footer class="footer">
       <div class="container">
         <div class="row">
-          <div class="col-3">
+          <div class="col-lg-4">
             <h3>Traveler Blog</h3>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nihil harum provident magni consequuntur molestiae iusto labore cum veritatis quia dolorum vitae quo ipsum ducimus, autem quos soluta dolorem? Iure, dolor!</p>
           </div>
 
-          <div class="col-3 ctnter">
+          <div class="col-lg-4 col-md-6">
             <h3>Contacts</h3>
             <address>
               <b>Twitter, Inc.</b><br>
@@ -174,13 +174,12 @@
             </address>
           </div>
 
-          <div class="col-3">
+          <div class="col-lg-4 col-md-6">
             <h3>Navigation</h3>
             <nav class="nav flex-column">
-                <a class="nav-link active" href="#">Active</a>
-                <a class="nav-link" href="#">Link</a>
-                <a class="nav-link" href="#">Link</a>
-                <a class="nav-link disabledgit commit -m "first commit"" href="#">Disabled</a>
+                <a class="nav-link active" href="#">Home</a>
+                <a class="nav-link" href="#">About</a>
+                <a class="nav-link" href="#">Contacts</a>
               </nav>
           </div>
         </div>
